[package]
name = "no-more-edge-rs"
version = "0.1.0"
edition = "2021"
authors = ["Andy Li"]
license = "MIT"
description = "Replaces edge calls with calls to the default browser"
homepage = "https://github.com/SpicyRicecaker/no-more-edge-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1.0"
regex = "1.6.0"
# clap = { version = "3.2.17", features = ["derive"] }
winreg = "0.10.1"
dirs = "4.0.0"
