[package]
name = "no-more-edge-rs"
version = "0.1.0"
edition = "2021"
authors = ["Andy Li"]
license = "MIT"
description = "Replaces edge calls with calls to your default browser"
homepage = "https://github.com/SpicyRicecaker/no-more-edge-rs"
repository = "https://github.com/SpicyRicecaker/no-more-edge-rs"
readme = "README.md"
keywords = ["windows", "edge", "nomoreedge", "edgedeflector", "browser"]
categories = ["config", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.2.0"
regex = "1.8.1"
winreg = "0.50.0"
